Replaced Redis with MQTT
Status update will be sent every 5 seconds

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,10 +13,10 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 upload_port = COM5
+monitor_speed = 9600
+monitor_filters = esp8266_exception_decoder
 lib_deps = 
 	bblanchon/ArduinoJson@^6.19.4
 	thijse/ArduinoLog@^1.1.1
 	contrem/arduino-timer@^2.3.1
-	adafruit/Adafruit INA260 Library@^1.5.0
-	electric-sheep-co/Redis for Arduino@^2.4.4
-	adafruit/DHT sensor library@^1.4.4
+	knolleary/PubSubClient@^2.8
