Add Config Option for MQTT

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,16 @@ lib_deps =
 	thijse/ArduinoLog@^1.1.1
 	contrem/arduino-timer@^2.3.1
 	knolleary/PubSubClient@^2.8
+build_flags =
+	${env.build_flags}
+	-D BOARD=BOARD_ESP8266_RELAY_MODULE
+
+[env:d1_mini]
+extends = env:nodemcuv2
+platform = espressif8266
+board = d1_mini
+board_build.f_cpu = 80000000L
+upload_port = COM7
+build_flags =
+	${env.build_flags}
+	-D BOARD=BOARD_OPENASTROPOWERHUB
